baseline project, images added

--- a/index.html
+++ b/index.html
@@ -2,25 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>SVG</title>
+    <title>SVG Icon Project</title>
     <link href="css/main.css" rel="stylesheet" type="text/css">
   </head>
 
 
   <body>
-    <h1 class="hidden">Trevor's SVG Class</h1>
-    <div id="container">
-      <nav id="mainNav">
-        <li id="navItem"> <a href="#">YOOO</a></li>
-        <li id="navItem"> <a href="#">YOOO</a></li>
-        <li id="navItem"> <a href="#">YOOO</a></li>
-      </nav>
 
-
-
-
-
+    <div class="image-wrapper">
+      <img src="images/newBadge.png" alt="New Badge">
     </div>
-    <footer id="mainFooter"></footer>
+
+    <div class="image-wrapper">
+      <img src="images/newBadge.svg" alt="SVG">
+    </div>
   </body>
 </html>
